tests/transpiler/x/zig/query_sum_select.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/query_sum_select.zig:10:24: error: use of undeclared identifier 'sum'
