tests/transpiler/x/zig/query_sum_select.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

pub fn main() void {
    const nums = [_]i64{1, 2, 3};
    const result: []i64 = blk: {
    var arr = std.ArrayList(i64).init(std.heap.page_allocator);
    for (nums) |n| {
        if (n > 1) {
            arr.append(sum(n)) catch unreachable;
        }
    }
    var tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{any}\n", .{result});
}
